--- a/i am neo/Index.html
+++ b/i am neo/Index.html
@@ -23,7 +23,7 @@
 
             <a href="#"><span class="glyphicon glyphicon-home"></span> Home</a>
             <a href="About.html">About us</a>
-            <a href="Contact.html"><span class="glyphicon glyphicon-envelope"> contact</a>
+            <a href="contact.html"><span class="glyphicon glyphicon-envelope"> contact</a>
 			 <div class="dropdown">
                 <button class="dropbutton"><span class="glyphicon glyphicon-log-in"></span> Login</button>
                 <div class="dropdown-content">
